test/classes/errors/nilability-init-var/init-var-oknil-owned-from-nonnil-unmanaged.good
init-var-oknil-owned-from-nonnil-unmanaged.chpl:9: error: cannot create an owned variable from an unmanaged class instance
